# analitiq-engine

./: .bandit  .deepsource.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMIT_EDITMSG  CONTRIBUTING.md  CREDENTIALS_GUIDE.md  Dockerfile  Dockerfile.cloud  ENGINE_ARCHITECTURE.md  HEAD  MAPPING_AND_TRANSFORMATIONS.md  ORIG_HEAD  PIPELINE.yaml  PIPELINE_CONFIG.md  PKG-ARCH.md  README.md  STATE_SPECIFICATION.md  STREAM_RESET.yaml  STREAM_STATE.yaml  TODO.md  TODO1.md  TODO3.md  aioresponses.py  analitiq.yaml  batch-tracking-discussion.md  cli.py  feedback.txt  gitdir  index  kirill.md  prompt.txt  pyproject.toml  requirements-dev.txt  requirements.txt  vulture_allowlist.py
.claude/agents/: api-docs-crawler.md  aws-log-parser.md  code-review-agent.md  pr-review-executor.md  python-code-reviewer.md  python-test-architect.md  test-writing-agent.md
.claude/commands/: test.md
.github/workflows/: ci.yml  codex-gate.yml  conversion-matrix.yml  gitleaks.yml
agents/: stream-mapping-agent.md
analitiq_stream/: TODO.md  __init__.py  config.py  runner.py
analitiq_stream/agents/: ep_1e63d782-4b67-4b7e-b845-4b4de5e4f46e.txt  ep_5a4b9e21-441f-4bc7-9d5e-41917b4357e6.txt  ep_fe38a2f0-c1e3-4e65-a0f1-227b9898a8b8.txt  workflow.py
analitiq_stream/connectors/: api.py  base.py
analitiq_stream/core/: __init__.py  credentials.py  data_transformer.py  engine.py  orchestrator.py  pipeline.py  pipeline_config_prep.py
analitiq_stream/examples/: generate_credentials_template.py
analitiq_stream/fault_tolerance/: __init__.py  circuit_breaker.py  config_compatibility.py  dead_letter_queue.py  retry_handler.py  sharded_state_manager.py  state_manager.py
analitiq_stream/mapping/: processor.py
analitiq_stream/models/: __init__.py  api.py  config.py  engine.py  state.py
analitiq_stream/schema/: schema_manager.py
analitiq_stream/transformations/: __init__.py  common.py
cdk/: README.md  pyproject.toml
cdk/cdk/: __init__.py  _extras.py  adbc_registry.py  base_handler.py  connection_runtime.py  contract.py  database_utils.py  declarations.py  derived_functions.py  exceptions.py  json_utils.py  predicate.py  query_builder.py  rate_limiter.py  registry.py  request_binding.py  resolver.py  schema_contract.py  sql_types.py  transport_factory.py  types.py
cdk/cdk/conformance/: __init__.py  conftest.py  declaration.py  fakes.py  plugin.py  roundtrip.py  skips.py  surface.py  target.py  violations.py
cdk/cdk/conformance/tier1/: __init__.py  test_definition.py  test_read_path.py  test_rendering.py  test_surface_and_declaration.py  test_type_map.py
cdk/cdk/conformance/tier2/: __init__.py  live.py  test_live.py
cdk/cdk/secrets/: __init__.py  exceptions.py  protocol.py
cdk/cdk/secrets/resolvers/: __init__.py  local.py  memory.py  scheme.py
cdk/cdk/sql/: __init__.py  _adbc_utils.py  adbc_backend.py  adbc_reader.py  backend.py  capabilities.py  ddl.py  dialects.py  discovery.py  exceptions.py  execution.py  generic.py  write_plan.py
cdk/cdk/type_map/: __init__.py  arrow.py  conversion_matrix.json  conversions.py  exceptions.py  grammar.py  loader.py  mapper.py  rules.py
docker/: .dockerignore  .env.example  Dockerfile  README.md  build-bundle.sh  cloud_entrypoint.py  config_fetcher.py  deploy-ecr.sh  deploy.sh  dev.env  docker-compose.aws.yml  docker-compose.bundle.yml  docker-compose.yml  entrypoint.py  entrypoint.sh  grpc_health_check.py  local.env  requirements.txt
docs/: ARCHITECTURE_ASSESSMENT.md  ARCHITECTURE_DECOUPLING_PLAN.md  CREDENTIALS_GUIDE.md  DESTINATION_CONFIG.md  ENGINE_ARCHITECTURE.md  GRPC_STREAMING_ARCHITECTURE.md  MAPPING_AND_TRANSFORMATIONS.md  PIPELINE.yaml  PIPELINE_METRICS_ATHENA.md  PIPELINE_PAYLOAD_ONLY.yaml  SOURCE_CONFIG.md  STREAM.yaml  STREAM_PAYLOAD.yaml  configuration.md  conformance-kit.md  connector-connection-parameterization.md  connector-module-architecture.md  destination-config.md  engine-architecture.md  engine-schema-alignment-plan.md  grpc-streaming-architecture.md  mapping-and-transformations.md  pyarrow-and-destinations.md  source-config.md  sql-write-path-v2.md
docs/architecture/: connector-modules-engine-adr.md
examples/: generate_credentials_template.py
examples/wise_to_postgres/: README.md  hst_c3a6d6b6-8c3d-4a2a-8c6a-5a9a0a8a8a8b.json  run_wise_to_postgres.py
examples/wise_to_sevdesk/: run.txt  run_wise_to_sevdesk.py
scripts/: generate_proto.sh  migrate_config_to_consolidated.py
src/: __init__.py  main.py  runner.py  runtime_archive.py
src/config/: __init__.py  analitiq_config.py  connection_loader.py  connector_sync.py  endpoint_resolver.py  exceptions.py  loader.py  schema_validator.py  settings.py  utils.py
src/connectors/: __init__.py  api.py
src/core/: __init__.py  credentials.py  data_transformer.py  engine.py  exceptions.py  orchestrator.py  pipeline.py  pipeline_config_prep.py
src/destination/: __init__.py  base_handler.py  schema_contract.py  server.py  sql_types.py  utils.py
src/engine/: __init__.py  data_transformer.py  derived_functions.py  engine.py  exceptions.py  expression_evaluator.py  orchestrator.py  pipeline.py  pipeline_config_prep.py  resolver.py  stream_processor.py
src/fault_tolerance/: __init__.py  dead_letter_queue.py  state_manager.py  state_storage.py
src/grpc/: __init__.py  client.py  cursor.py
src/mapping/: __init__.py
src/models/: __init__.py  api.py  engine.py  enriched.py  metrics.py  pipeline.py  resolved.py  state.py  stream.py  stream_state.py  transformations.py
src/schema/: __init__.py
src/secrets/: __init__.py  config_wrapper.py  exceptions.py  protocol.py
tests/: README.md  conftest.py  test_api_incremental.py  test_api_incremental_integration.py  test_circuit_breaker.py  test_data_transformer.py  test_engine_improvements.py  test_engine_unit.py  test_expression_evaluator.py  test_metrics.py  test_orchestrator.py  test_pipeline_integration.py  test_rate_limiter.py  test_retry_handler.py  test_security_integration.py  test_sharded_state_manager.py  test_transformations.py
ui/: README.md  __init__.py  app.py
(+373 files in other folders)
