[tool.poetry]
name = "analitiq-stream"
version = "0.1.0"
description = "A fault-tolerant data streaming framework for Python 3.11+"
authors = ["Analitiq Core Team <dev@analitiq.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/analitiq/analitiq-stream"
repository = "https://github.com/analitiq/analitiq-stream"
documentation = "https://docs.analitiq.com"
keywords = ["data-streaming", "etl", "pipeline", "async", "fault-tolerant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Distributed Computing",
]
# The engine (``src``) consumes the in-tree CDK (``cdk/cdk``), so a Poetry
# install / built wheel must expose both as importable top-level packages —
# otherwise ``import cdk`` fails for any non-Docker, non-pytest run (Docker sets
# PYTHONPATH=/app:/app/cdk; pytest sets ``pythonpath = ["cdk"]``). ``packages``
# is build metadata only and is not part of Poetry's lock content-hash, so this
# needs no relock.
packages = [{include = "src"}, {include = "cdk", from = "cdk"}]

[tool.poetry.dependencies]
python = "^3.11"

# Core async and concurrency
aiofiles = "^23.0.0"

# Database drivers are NOT pinned by the engine: each connector package
# ships its own driver and is installed when the connector is attached
# (docker/entrypoint.sh in the image; pip install of the connector
# package elsewhere).

# SQLAlchemy for database abstraction
sqlalchemy = {version = "^2.0.0", extras = ["asyncio"]}

# API connectors
aiohttp = "^3.8.0"
aiohttp-retry = "^2.8.3"

# Fast JSON encoder for API destination bodies. orjson natively handles
# datetime / date / time / UUID; we wire a default= hook for Decimal
# (precision) and bytes (base64). Avoids the per-batch Arrow-level cast
# that stdlib json would otherwise require.
orjson = "^3.9.0"

# Data processing and validation
pydantic = "^2.0.0"

# Published Analitiq contract packages (PyPI). The engine validates on-disk
# artifacts against these offline, so it never fetches a schema at runtime:
#   - contract-models: the single source of artifact shape
#     (connector/connection/pipeline/stream/endpoint). Per-document validity is
#     the models' job (src/config/schema_validator.py).
#   - validator: cross-document referential integrity of an assembled run
#     bundle (validate_pipeline_bundle, used in src/engine/pipeline_config_prep).
# Pinned exactly (release candidates); bump deliberately to adopt a new contract.
analitiq-contract-models = {version = "1.0.0rc10", allow-prereleases = true}
analitiq-validator = {version = "1.0.0rc10", allow-prereleases = true}

# Retry and fault tolerance
backoff = "^2.0.0"

# Logging and monitoring
structlog = "^23.0.0"
prometheus-client = "^0.17.0"

# Configuration and utilities
python-dotenv = "^1.0.0"
python-dateutil = "^2.9.0"
click = "^8.0.0"
pyyaml = "^6.0.0"

# gRPC for destination streaming
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
protobuf = "^4.25.0"

# Serialization formats for gRPC payloads
msgpack = "^1.0.0"

# Arrow for columnar type casting (required for destination handlers)
pyarrow = "^12.0.0"

# Optional dependencies
kafka-python = {version = "^2.0.0", optional = true}
aiokafka = {version = "^0.8.0", optional = true}
boto3 = {version = "^1.26.0", optional = true}
azure-storage-blob = {version = "^12.0.0", optional = true}
google-cloud-storage = {version = "^2.0.0", optional = true}
pandas = {version = "^2.0.0", optional = true}
numpy = "<2"
motor = {version = "^3.0.0", optional = true}
aioredis = {version = "^2.0.0", optional = true}
cryptography = {version = "^41.0.0", optional = true}
passlib = {version = "^1.7.4", optional = true}
apscheduler = {version = "^3.10.0", optional = true}

strands-agents = "^1.3.0"
strands-agents-tools = "^0.2.3"
bedrock-agentcore = "^0.1.2"
langchain-aws = "^0.2.31"
langgraph = "^0.6.6"
langchain-core = "^0.3.75"
langchain = "^0.3.27"
langsmith = "^0.4.25"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
isort = "^5.12.0"
pre-commit = "^3.3.0"
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.3.0"
coverage = "^7.10.3"
aioresponses = "^0.7.8"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
flask = "^3.1.2"


[tool.poetry.extras]
kafka = ["kafka-python", "aiokafka"]
cloud = ["boto3", "azure-storage-blob", "google-cloud-storage"]
# s3:// secret refs (SchemeSecretsResolver). Lazy boto3 import, so the core
# engine stays dependency-light and cloud-free unless a connection uses it.
s3 = ["boto3"]
analytics = ["pandas", "numpy"]
nosql = ["motor", "aioredis"]
mongodb = ["motor"]
security = ["cryptography", "passlib"]
scheduling = ["apscheduler"]
# No per-database extras: database drivers ship with their connector
# packages (analitiq-connector-{connector_id}), never with the engine.
all = [
    "kafka-python", "aiokafka",
    "boto3", "azure-storage-blob", "google-cloud-storage",
    "pandas", "numpy",
    "motor", "aioredis",
    "cryptography", "passlib",
    "apscheduler",
]

[tool.poetry.scripts]
# Scripts removed for Docker deployment - using entrypoint.py directly
# analitiq-stream = "src.cli:main"
# test = "pytest"
# coverage = "src.cli:coverage_html"
# coverage-html = "src.cli:coverage_html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
# The CDK is a sibling package (cdk/cdk/), consumed in-tree. Put cdk/ on the
# type-check path so `import cdk` resolves to cdk/cdk (mirrors pytest's
# pythonpath and Docker's PYTHONPATH=/app/cdk); without it every cdk import
# reports import-not-found.
mypy_path = "cdk"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
# Generated gRPC stubs are machine-emitted, not hand-maintained; keep them out
# of type checking (mirrors the [tool.flake8] and pre-commit excludes for
# src/grpc/generated). exclude drops them from the checked set; the override
# below silences any errors reached by following imports into them.
exclude = ['^src/grpc/generated/']

[[tool.mypy.overrides]]
module = [
    "analitiq.v1.*",
    "src.grpc.generated.*",
    "grpc.generated.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "aiomysql.*",
    "aiohttp.*",
    "kafka.*",
    "boto3.*",
    "botocore.*",
    "azure.*",
    "google.*",
    "grpc.*",
    "google.protobuf.*",
    "msgpack.*",
    "pyarrow.*",
    "dateutil.*",
    # Published contract packages (PyPI). Not in the pre-commit mypy hook's
    # additional_dependencies, so the isolated hook env cannot resolve them.
    "analitiq.contracts.*",
    "analitiq.validator.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -v --strict-markers --strict-config --ignore=tests/unit/src/fault_tolerance"
testpaths = ["tests"]
# The CDK is a sibling package (cdk/cdk/), consumed in-tree. Put cdk/ on the
# path so `import cdk` resolves to cdk/cdk without an editable install. Docker
# sets PYTHONPATH=/app:/app/cdk for the same reason.
pythonpath = ["cdk"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "fault_tolerance: marks tests as fault tolerance tests (run separately)",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/src/models/*",
    "*/examples/*",
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/virtualenv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = true

# Read by flake8 via the Flake8-pyproject plugin (stock flake8 ignores
# pyproject.toml). The pre-commit flake8 hook also loads flake8-bugbear and
# flake8-datetimez, which add the B/DTZ checks selected below.
[tool.flake8]
max-line-length = 88
# Checks mapped to issue #265 Part A's recurring families:
#   - silent failures: E722 bans bare `except:`; B904 (opt-in, selected below)
#     keeps a re-raise's cause. Broad `except Exception: pass/return None`
#     suppression is deliberately NOT gated -- the engine uses handled broad
#     excepts, so that stays a review concern.
#   - dead code: pyflakes F401/F811/F841 (on by default) flag unused imports,
#     redefinitions and unused variables in changed files.
#   - naive datetimes: DTZ (flake8-datetimez) bans datetime.now()/utcnow()
#     without tzinfo.
# B0xx (bugbear defaults) and DTZ come on once the plugins are present; E203/W503
# stay ignored for black compatibility.
extend-select = ["B904"]
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    ".venv",
    "venv",
    "src/grpc/generated",
]

[tool.pydocstyle]
# Enforce docstring STYLE, not presence. Issue #265 Part A targets three defect
# families (silent failures, dead code, naive datetimes); mandating a docstring
# on every public module/class/method is out of scope and would add ~1,700
# low-signal stubs. The D1xx "missing docstring" family is therefore ignored,
# while the D2xx/D4xx style rules (blank lines, punctuation, imperative mood)
# stay enforced wherever a docstring exists.
add-ignore = "D100,D101,D102,D103,D104,D105,D106,D107"

[tool.bandit]
# Security scanning of the engine/CDK source. Migrated from the legacy INI
# .bandit file (which bandit's -c flag cannot parse). Tests are scanned
# separately-excluded at the hook level.
exclude_dirs = ["tests", "docs", "examples"]
# B101 (assert_used): asserts are used for internal invariants, not validation.
# B601 (paramiko_calls): not applicable; no shell-out via paramiko.
skips = ["B101", "B601"]
