[tool.poetry]
name = "analitiq-cdk"
version = "0.2.0"
description = "Analitiq Connector Development Kit: vendor-neutral, transport-neutral building blocks (transports, ConnectionRuntime, type-map, secrets seam, query builder, read/write contracts) shared by the engine and the cloud control-plane."
authors = ["Analitiq Core Team <dev@analitiq.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "cdk" }]

[tool.poetry.dependencies]
# The CDK is deliberately small: it knows SQL-in-general and HTTP, never a
# specific database (the "would this change when you add Clickhouse?" test) and
# never the streaming wire protocol. Explicitly NOT grpcio / protobuf.
# Per-driver DB packages (asyncpg, adbc-driver-*, ...) are pulled in by the
# connector that needs them, not by the CDK core.
#
# Core surface = the SQL control-plane: ``cdk.sql`` discovery + standalone
# ``create_table`` over SQLAlchemy, the ConnectionRuntime/transport seam, the
# type-map and secrets machinery. That surface needs only SQLAlchemy + Pydantic.
# Arrow columnar streaming (pyarrow) and the HTTP transport (aiohttp) are
# opt-in extras so a database-only consumer (e.g. a control-plane process that
# only introspects schemas and creates tables) installs neither.
python = "^3.11"
sqlalchemy = { version = "^2.0.0", extras = ["asyncio"] }
pydantic = "^2.0.0"
# Optional: Arrow columnar read/write (read_batches / write_batch, schema
# casting, the ADBC reader, the DDL type renderers).
pyarrow = { version = ">=14.0.0", optional = true }
# Optional: HTTP transport for API connectors.
aiohttp = { version = "^3.8.0", optional = true }
# Optional: S3 / S3-compatible object store for s3:// secret refs
# (cdk.secrets.resolvers.scheme.SchemeSecretsResolver s3 scheme).
boto3 = { version = "^1.26.0", optional = true }
# Optional: the connector conformance suite (cdk.conformance) a connector
# repo runs in its own CI against the pinned CDK version (issue #391).
pytest = { version = ">=7.0", optional = true }

[tool.poetry.extras]
# Arrow columnar streaming surface (cdk.schema_contract, cdk.sql_types,
# cdk.sql.adbc_reader, type_map.parse_arrow_type, GenericSQLConnector read/write).
arrow = ["pyarrow"]
# HTTP transport for API connectors (cdk.transport_factory http builder).
api = ["aiohttp"]
# s3:// secret refs (SchemeSecretsResolver s3 scheme). Lazy boto3 import, so the
# CDK core stays dependency-light and cloud-free unless a connection uses it.
s3 = ["boto3"]
# Full streaming connector surface the engine consumes: both of the above.
streaming = ["pyarrow", "aiohttp"]
# The connector conformance suite (issue #391): tier 1 contract tests and
# the tier 2 live suite a connector repo runs in its own CI.
# `pytest --pyargs cdk.conformance.tier1 --connector-dir .`
conformance = ["pytest", "pyarrow"]

# Registers the conformance suite's pytest options (--connector-dir,
# --connector-class, --live-connection) wherever this package is installed.
# The plugin only adds options; it collects nothing on its own.
[tool.poetry.plugins."pytest11"]
analitiq_conformance = "cdk.conformance.plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
